# rust-indexer

./: .env.example  .gitattributes  Cargo.toml  README.md
migrations/2024-01-01-000001_initial/: down.sql  up.sql
src/: config.rs  indexer.rs  lib.rs  main.rs  schema.rs  types.rs
