[package]
name = "rust-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
alloy = { version = "1.1", features = ["provider-http", "rpc-types"] }
alloy-primitives = "1.4"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
dotenvy = "0.15"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
